--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
    http: ^1.2.1
    shared_preferences: ^2.0.15 
    firebase_core: ^3.15.2
+   font_awesome_flutter: ^10.8.0
+   cloud_firestore: ^5.6.12
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
