--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,10 @@ dependencies:
    latlong2: ^0.9.0
    http: ^1.2.1
    shared_preferences: ^2.0.15 
-   firebase_core: ^3.15.2
+   firebase_core: ^4.0.0
    font_awesome_flutter: ^10.8.0
-   cloud_firestore: ^5.6.12
+   cloud_firestore: ^6.0.0
+   firebase_database: ^12.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
