--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,22 +28,22 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-   flutter:
+  flutter:
     sdk: flutter
-   intl: ^0.18.1
-   fl_chart: ^0.64.0
-   flutter_map: ^5.0.0
-   latlong2: ^0.9.0
-   http: ^1.2.1
-   shared_preferences: ^2.0.15 
-   firebase_core: ^4.0.0
-   font_awesome_flutter: ^10.8.0
-   cloud_firestore: ^6.0.0
-   firebase_database: ^12.0.0
-   
+  intl: ^0.18.1
+  fl_chart: ^0.64.0
+  flutter_map: ^5.0.0
+  latlong2: ^0.9.0
+  http: ^1.2.1
+  shared_preferences: ^2.0.15 
+  firebase_core: ^4.0.0
+  font_awesome_flutter: ^10.8.0
+  cloud_firestore: ^6.0.0
+  firebase_database: ^12.0.0
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-   cupertino_icons: ^1.0.8
+  cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
@@ -70,8 +70,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  #   - images/a_dot_burr.jpeg
+  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -85,16 +85,20 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  #   - family: Schyler
+  #     fonts:
+  #       - asset: fonts/Schyler-Regular.ttf
+  #       - asset: fonts/Schyler-Italic.ttf
+  #         style: italic
+  #   - family: Trajan Pro
+  
+  # 💡 แก้ไขโครงสร้าง YAML ของฟอนต์ Prompt 💡
+  fonts:
+    - family: Prompt 
+      fonts:
+        - asset: assets/fonts/Prompt-Regular.ttf
+        - asset: assets/fonts/Prompt-Bold.ttf
+          weight: 700
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
